cicd/base/100-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/MoOyeg/testFlask-tekton.git?ref=main
  creationTimestamp: null
  name: 1234-tekton
spec: {}
status: {}
