cicd/base/700-listener-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: el-listener
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: listener
spec:
  to:
    kind: Service
    name: el-testflask-listener
    weight: 100
  port:
    targetPort: http-listener
  wildcardPolicy: None
